--- a/pages/ghid_proceduri.html
+++ b/pages/ghid_proceduri.html
@@ -16,11 +16,11 @@
 
     <h3 style="margin-top: 30px; border-bottom: 1px solid rgba(255,255,255,0.1); padding-bottom: 10px;">🟡 Lanțul de Comandă</h3>
     <div style="background: rgba(255,255,255,0.05); padding: 20px; border-radius: 8px; border: 1px solid rgba(255,255,255,0.05);">
-        <p style="color: #cbd5e1; margin-bottom: 15px;">
+        <p style="color: #f1f5f9; margin-bottom: 15px; font-size: 15px; line-height: 1.6;">
             Orice nelămurire se adresează gradului superior direct (Cadet ➔ Agent ➔ Agent Principal).<br>
             Ascultați ordinele superiorilor! Ei sunt răspunzători pentru deciziile luate.
         </p>
-        <div style="background: rgba(0,0,0,0.3); padding: 10px; border-left: 3px solid #f59e0b;">
+        <div style="background: rgba(0,0,0,0.3); padding: 15px; border-left: 3px solid #f59e0b; font-size: 14px; color: #cbd5e1;">
             <strong>Reclamații:</strong> Doar pentru grade superioare pe Discord (#reclamații-colegi).<br>
             Pentru reclamații asupra unui <strong>INSPECTOR+</strong> vă adresați unui <strong>SUBCOMISAR+</strong>.
         </div>
@@ -29,24 +29,24 @@
     <h3 style="margin-top: 30px; border-bottom: 1px solid rgba(255,255,255,0.1); padding-bottom: 10px;">🟡 Departamente & Structuri</h3>
     <div style="display: grid; grid-template-columns: repeat(auto-fit, minmax(300px, 1fr)); gap: 15px;">
         
-        <div style="background: rgba(255,255,255,0.05); padding: 15px; border-radius: 8px;">
-            <h4 style="color: #f59e0b; margin: 0 0 5px 0;">Tester</h4>
-            <p style="font-size: 13px; color: #cbd5e1;">Testarea cunoștințelor pentru integrarea în IPJ Los Santos și Penitenciar.</p>
+        <div style="background: rgba(255,255,255,0.05); padding: 20px; border-radius: 8px;">
+            <h4 style="color: #f59e0b; margin: 0 0 8px 0; font-size: 16px;">Tester</h4>
+            <p style="font-size: 15px; color: #f1f5f9; line-height: 1.5;">Testarea cunoștințelor pentru integrarea în VPD.</p>
         </div>
 
-        <div style="background: rgba(255,255,255,0.05); padding: 15px; border-radius: 8px;">
-            <h4 style="color: #f59e0b; margin: 0 0 5px 0;">Instructori</h4>
-            <p style="font-size: 13px; color: #cbd5e1;">Ramuri: <strong>Moto, Highspeed, Pilot</strong>. Acces prin recrutare internă.</p>
+        <div style="background: rgba(255,255,255,0.05); padding: 20px; border-radius: 8px;">
+            <h4 style="color: #f59e0b; margin: 0 0 8px 0; font-size: 16px;">Instructori</h4>
+            <p style="font-size: 15px; color: #f1f5f9; line-height: 1.5;">Ramuri: <strong>Moto, Highspeed, Pilot</strong>. Acces prin recrutare internă.</p>
         </div>
 
-        <div style="background: rgba(255,255,255,0.05); padding: 15px; border-radius: 8px;">
-            <h4 style="color: #ef4444; margin: 0 0 5px 0;">DIICOT</h4>
-            <p style="font-size: 13px; color: #cbd5e1;">Combatere criminalitate organizată, acțiuni de mare risc, mandate.</p>
+        <div style="background: rgba(255,255,255,0.05); padding: 20px; border-radius: 8px;">
+            <h4 style="color: #ef4444; margin: 0 0 8px 0; font-size: 16px;">DIICOT</h4>
+            <p style="font-size: 15px; color: #f1f5f9; line-height: 1.5;">Combatere criminalitate organizată, acțiuni de mare risc, mandate.</p>
         </div>
 
-        <div style="background: rgba(255,255,255,0.05); padding: 15px; border-radius: 8px;">
-            <h4 style="color: #ef4444; margin: 0 0 5px 0;">DCCO</h4>
-            <p style="font-size: 13px; color: #cbd5e1;">Investigare organizații criminale, întocmire mandate. Informații confidențiale.</p>
+        <div style="background: rgba(255,255,255,0.05); padding: 20px; border-radius: 8px;">
+            <h4 style="color: #ef4444; margin: 0 0 8px 0; font-size: 16px;">DCCO</h4>
+            <p style="font-size: 15px; color: #f1f5f9; line-height: 1.5;">Investigare organizații criminale, întocmire mandate. Informații confidențiale.</p>
         </div>
     </div>
 
@@ -54,8 +54,8 @@
     <div style="display: flex; flex-direction: column; gap: 15px;">
         
         <div style="background: rgba(239, 68, 68, 0.1); padding: 20px; border-radius: 8px; border: 1px solid rgba(239, 68, 68, 0.3);">
-            <h4 style="color: #ef4444; margin: 0 0 10px 0;">🔫 Armă Letală</h4>
-            <ul style="margin: 0; padding-left: 20px; color: #cbd5e1; font-size: 14px; line-height: 1.6;">
+            <h4 style="color: #ef4444; margin: 0 0 10px 0; font-size: 18px;">🔫 Armă Letală</h4>
+            <ul style="margin: 0; padding-left: 20px; color: #f1f5f9; font-size: 15px; line-height: 1.6;">
                 <li>Viața ta sau a unui coleg este în pericol.</li>
                 <li>Persoana se apropie cu o armă albă sau îndreaptă arma spre voi după somație.</li>
                 <li>Se deschide focul asupra voastră.</li>
@@ -65,18 +65,18 @@
         </div>
 
         <div style="background: rgba(245, 158, 11, 0.1); padding: 20px; border-radius: 8px; border: 1px solid rgba(245, 158, 11, 0.3);">
-            <h4 style="color: #f59e0b; margin: 0 0 10px 0;">⚡ Taser (Electroșoc)</h4>
+            <h4 style="color: #f59e0b; margin: 0 0 10px 0; font-size: 18px;">⚡ Taser (Electroșoc)</h4>
             <div style="display: flex; flex-wrap: wrap; gap: 20px;">
                 <div style="flex: 1; min-width: 250px;">
-                    <strong style="color:#fff;">PERMIS:</strong>
-                    <ul style="margin: 5px 0 0 0; padding-left: 20px; color: #cbd5e1; font-size: 13px;">
+                    <strong style="color:#fff; font-size: 16px;">PERMIS:</strong>
+                    <ul style="margin: 5px 0 0 0; padding-left: 20px; color: #f1f5f9; font-size: 15px; line-height: 1.5;">
                         <li>Suspectul fuge pe jos sau încearcă să fugă cu mașina după somație.</li>
                         <li>Suspect pe motocicletă (< 30 km/h) cu aprobare Inspector+.</li>
                     </ul>
                 </div>
                 <div style="flex: 1; min-width: 250px;">
-                    <strong style="color:#ef4444;">INTERZIS:</strong>
-                    <ul style="margin: 5px 0 0 0; padding-left: 20px; color: #cbd5e1; font-size: 13px;">
+                    <strong style="color:#ef4444; font-size: 16px;">INTERZIS:</strong>
+                    <ul style="margin: 5px 0 0 0; padding-left: 20px; color: #f1f5f9; font-size: 15px; line-height: 1.5;">
                         <li>În apă sau la înălțime (risc de cădere).</li>
                         <li>Suspect pe scară.</li>
                         <li>Suspect înarmat (risc descărcare armă).</li>
@@ -88,19 +88,17 @@
 
     <h3 style="margin-top: 30px; border-bottom: 1px solid rgba(255,255,255,0.1); padding-bottom: 10px;">🟡 Patrule & Zone</h3>
     <div style="display: grid; grid-template-columns: repeat(auto-fit, minmax(300px, 1fr)); gap: 15px;">
-        <div style="background: rgba(255,255,255,0.05); padding: 15px; border-radius: 8px;">
-            <h4 style="color: #3b82f6; margin: 0 0 5px 0;">Reguli Patrulă</h4>
-            <ul style="font-size: 13px; color: #cbd5e1; padding-left: 20px;">
+        <div style="background: rgba(255,255,255,0.05); padding: 20px; border-radius: 8px;">
+            <h4 style="color: #3b82f6; margin: 0 0 8px 0; font-size: 16px;">Reguli Patrulă</h4>
+            <ul style="font-size: 15px; color: #f1f5f9; padding-left: 20px; line-height: 1.5;">
                 <li>Minim 2 persoane.</li>
-                <li>Interzis Cadet cu Cadet.</li>
                 <li>Interzisă patrula mixtă (cu alte departamente).</li>
-                <li>Karin Kuruma interzisă la roleplay cu focuri de armă.</li>
             </ul>
         </div>
-        <div style="background: rgba(255,255,255,0.05); padding: 15px; border-radius: 8px;">
-            <h4 style="color: #ef4444; margin: 0 0 5px 0;">Zone Rău-Famate</h4>
-            <p style="font-size: 12px; color: #9ca3af; margin-bottom: 5px;">(Grove, Vinewood, Vespucci, Exterior 20:00-08:00)</p>
-            <ul style="font-size: 13px; color: #cbd5e1; padding-left: 20px;">
+        <div style="background: rgba(255,255,255,0.05); padding: 20px; border-radius: 8px;">
+            <h4 style="color: #ef4444; margin: 0 0 8px 0; font-size: 16px;">Zone Rău-Famate</h4>
+            <p style="font-size: 13px; color: #9ca3af; margin-bottom: 5px;">(Grove, Vinewood, Vespucci, Exterior 20:00-08:00)</p>
+            <ul style="font-size: 15px; color: #f1f5f9; padding-left: 20px; line-height: 1.5;">
                 <li>Acces doar la anunțul unui <strong>INSPECTOR+</strong>.</li>
                 <li>Obligatoriu <strong>BK 3</strong> înainte de orice info vocal.</li>
                 <li>Se anunță orice Traffic Stop.</li>
@@ -110,9 +108,9 @@
 
     <h3 style="margin-top: 30px; border-bottom: 1px solid rgba(255,255,255,0.1); padding-bottom: 10px;">🟡 Percheziții</h3>
     <div style="background: rgba(255,255,255,0.05); padding: 20px; border-radius: 8px;">
-        <p style="color: #cbd5e1; font-size: 14px;"><strong>Se permite percheziția dacă:</strong> poartă mască/vestă, vehicul fără numere, armă la vedere, mandat activ, sau comportament suspect în zone rău famate.</p>
-        <div style="background: rgba(0,0,0,0.2); padding: 10px; margin-top: 10px; border-left: 3px solid #ef4444;">
-            <strong style="color: #ef4444;">Important la 10-11:</strong> Dacă ajungeți târziu, nu aveți voie să percheziționați. Dacă suspectul are dovadă video că nu a tras, îl duceți la secție pentru vizionare (nu percheziție pe loc).
+        <p style="color: #f1f5f9; font-size: 15px; line-height: 1.5;"><strong>Se permite percheziția dacă:</strong> poartă mască/vestă, vehicul fără numere, armă la vedere, mandat activ, sau comportament suspect în zone rău famate.</p>
+        <div style="background: rgba(0,0,0,0.2); padding: 15px; margin-top: 15px; border-left: 3px solid #ef4444;">
+            <strong style="color: #ef4444; font-size: 15px;">Important la 10-11:</strong> <span style="color: #cbd5e1; font-size: 14px;">Dacă ajungeți târziu, nu aveți voie să percheziționați. Dacă suspectul are dovadă video că nu a tras, îl duceți la secție pentru vizionare (nu percheziție pe loc).</span>
         </div>
     </div>
 
@@ -138,18 +136,18 @@
 
     <h3 style="margin-top: 30px; border-bottom: 1px solid rgba(255,255,255,0.1); padding-bottom: 10px;">🟡 Trafic & Urmăriri</h3>
     <div style="display: grid; grid-template-columns: repeat(auto-fit, minmax(300px, 1fr)); gap: 15px;">
-        <div style="background: rgba(255,255,255,0.05); padding: 15px; border-radius: 8px;">
-            <h4 style="color: #f59e0b; margin: 0 0 5px 0;">Traffic Stop</h4>
-            <ul style="font-size: 13px; color: #cbd5e1; padding-left: 20px;">
+        <div style="background: rgba(255,255,255,0.05); padding: 20px; border-radius: 8px;">
+            <h4 style="color: #f59e0b; margin: 0 0 8px 0; font-size: 16px;">Traffic Stop</h4>
+            <ul style="font-size: 15px; color: #f1f5f9; padding-left: 20px; line-height: 1.5;">
                 <li>Poziționare: 45° spre stânga.</li>
                 <li>Pasagerul coboară, se prezintă, cere acte.</li>
                 <li>Verificare MDT obligatorie.</li>
                 <li>Dacă nu are permis: mașina se abandonează.</li>
             </ul>
         </div>
-        <div style="background: rgba(255,255,255,0.05); padding: 15px; border-radius: 8px;">
-            <h4 style="color: #ef4444; margin: 0 0 5px 0;">Urmăriri</h4>
-            <ul style="font-size: 13px; color: #cbd5e1; padding-left: 20px;">
+        <div style="background: rgba(255,255,255,0.05); padding: 20px; border-radius: 8px;">
+            <h4 style="color: #ef4444; margin: 0 0 8px 0; font-size: 16px;">Urmăriri</h4>
+            <ul style="font-size: 15px; color: #f1f5f9; padding-left: 20px; line-height: 1.5;">
                 <li>Maxim 3 echipaje active.</li>
                 <li>Pentru depășire: Cereți 10-2 pe stație.</li>
                 <li>Intrare în locuință: Doar cu mandat (contact [001]).</li>
@@ -160,24 +158,24 @@
 
     <h3 style="margin-top: 30px; border-bottom: 1px solid rgba(255,255,255,0.1); padding-bottom: 10px;">🟡 Manevre & Blocaje</h3>
     <div style="display: flex; gap: 15px; flex-wrap: wrap;">
-        <div style="flex: 1; background: rgba(0,0,0,0.2); border: 1px solid rgba(255,255,255,0.1); padding: 15px; border-radius: 6px;">
-            <h4 style="margin: 0; color: #fff;">PIT STOP</h4>
-            <p style="font-size: 12px; color: #9ca3af;">Interzis peste 150 km/h. Doar cu aprobare Inspector+.</p>
+        <div style="flex: 1; background: rgba(0,0,0,0.2); border: 1px solid rgba(255,255,255,0.1); padding: 20px; border-radius: 6px;">
+            <h4 style="margin: 0; color: #fff; font-size: 16px;">PIT STOP</h4>
+            <p style="font-size: 14px; color: #9ca3af; margin-top: 5px;">Interzis peste 150 km/h. Doar cu aprobare Inspector+.</p>
         </div>
-        <div style="flex: 1; background: rgba(0,0,0,0.2); border: 1px solid rgba(255,255,255,0.1); padding: 15px; border-radius: 6px;">
-            <h4 style="margin: 0; color: #fff;">BOX</h4>
-            <p style="font-size: 12px; color: #9ca3af;">Blocare cu 4 vehicule. Interzis peste 30 km/h. Aprobare Inspector+.</p>
+        <div style="flex: 1; background: rgba(0,0,0,0.2); border: 1px solid rgba(255,255,255,0.1); padding: 20px; border-radius: 6px;">
+            <h4 style="margin: 0; color: #fff; font-size: 16px;">BOX</h4>
+            <p style="font-size: 14px; color: #9ca3af; margin-top: 5px;">Blocare cu 4 vehicule. Interzis peste 30 km/h. Aprobare Inspector+.</p>
         </div>
-        <div style="flex: 1; background: rgba(0,0,0,0.2); border: 1px solid rgba(255,255,255,0.1); padding: 15px; border-radius: 6px;">
-            <h4 style="margin: 0; color: #fff;">BLOCAJE</h4>
-            <p style="font-size: 12px; color: #9ca3af;">Se anunță pe stație. Nu vă mutați până trece ultima unitate.</p>
+        <div style="flex: 1; background: rgba(0,0,0,0.2); border: 1px solid rgba(255,255,255,0.1); padding: 20px; border-radius: 6px;">
+            <h4 style="margin: 0; color: #fff; font-size: 16px;">BLOCAJE</h4>
+            <p style="font-size: 14px; color: #9ca3af; margin-top: 5px;">Se anunță pe stație. Nu vă mutați până trece ultima unitate.</p>
         </div>
     </div>
 
     <h3 style="margin-top: 30px; border-bottom: 1px solid rgba(255,255,255,0.1); padding-bottom: 10px;">🟡 Reguli Administrative</h3>
     <div style="background: rgba(239, 68, 68, 0.05); padding: 20px; border-radius: 8px; border: 1px solid rgba(239, 68, 68, 0.2);">
-        <h4 style="color: #ef4444; margin: 0 0 10px 0;">Corupție & OOC</h4>
-        <ul style="font-size: 13px; color: #cbd5e1; padding-left: 20px; columns: 2;">
+        <h4 style="color: #ef4444; margin: 0 0 10px 0; font-size: 16px;">Corupție & OOC</h4>
+        <ul style="font-size: 15px; color: #f1f5f9; padding-left: 20px; columns: 2; line-height: 1.6;">
             <li>Interzis să treceți cu vederea crime.</li>
             <li>Interzis depozitare arme/medikit în mașini personale.</li>
             <li>Interzis ajutor suspecți (prieteni).</li>
