--- a/pages/ghid_proceduri.html
+++ b/pages/ghid_proceduri.html
@@ -97,7 +97,7 @@
         </div>
         <div style="background: rgba(255,255,255,0.05); padding: 20px; border-radius: 8px;">
             <h4 style="color: #ef4444; margin: 0 0 8px 0; font-size: 16px;">Zone Rău-Famate</h4>
-            <p style="font-size: 13px; color: #9ca3af; margin-bottom: 5px;">(Grove, Vinewood, Vespucci, Exterior 20:00-08:00)</p>
+            <p style="font-size: 13px; color: #9ca3af; margin-bottom: 5px;">(Grove, Vinewood, Vespucci, Exterior Los Santos 20:00-08:00)</p>
             <ul style="font-size: 15px; color: #f1f5f9; padding-left: 20px; line-height: 1.5;">
                 <li>Acces doar la anunțul unui <strong>INSPECTOR+</strong>.</li>
                 <li>Obligatoriu <strong>BK 3</strong> înainte de orice info vocal.</li>
@@ -109,8 +109,35 @@
     <h3 style="margin-top: 30px; border-bottom: 1px solid rgba(255,255,255,0.1); padding-bottom: 10px;">🟡 Percheziții</h3>
     <div style="background: rgba(255,255,255,0.05); padding: 20px; border-radius: 8px;">
         <p style="color: #f1f5f9; font-size: 15px; line-height: 1.5;"><strong>Se permite percheziția dacă:</strong> poartă mască/vestă, vehicul fără numere, armă la vedere, mandat activ, sau comportament suspect în zone rău famate.</p>
-        <div style="background: rgba(0,0,0,0.2); padding: 15px; margin-top: 15px; border-left: 3px solid #ef4444;">
-            <strong style="color: #ef4444; font-size: 15px;">Important la 10-11:</strong> <span style="color: #cbd5e1; font-size: 14px;">Dacă ajungeți târziu, nu aveți voie să percheziționați. Dacă suspectul are dovadă video că nu a tras, îl duceți la secție pentru vizionare (nu percheziție pe loc).</span>
+        <p style="color: #9ca3af; font-size: 13px; margin-top: 5px;">* Dacă persoana are vehicul în zonă, se percheziționează și mașina.</p>
+    </div>
+
+    <h3 style="margin-top: 30px; border-bottom: 1px solid rgba(255,255,255,0.1); padding-bottom: 10px;">🟡 Proceduri la 10-11 (Focuri de Armă)</h3>
+    <div style="background: rgba(255,255,255,0.05); padding: 20px; border-radius: 8px;">
+        
+        <div style="margin-bottom: 15px;">
+            <strong style="color: #ef4444; font-size: 16px;">1. Ați ajuns TÂRZIU (după alertă)</strong>
+            <p style="color: #cbd5e1; font-size: 15px; margin: 5px 0 0 0;">Luați la întrebări persoanele prezente. <strong>NU</strong> aveți voie să faceți percheziție.</p>
+        </div>
+
+        <div style="margin-bottom: 15px;">
+            <strong style="color: #3b82f6; font-size: 16px;">2. Ați ajuns la timp + Fără obiecții</strong>
+            <p style="color: #cbd5e1; font-size: 15px; margin: 5px 0 0 0;">După legitimare, dacă persoana nu are nimic de obiectat ➜ <strong>PERCHEZIȚIE</strong>.</p>
+        </div>
+
+        <div style="margin-bottom: 15px;">
+            <strong style="color: #f59e0b; font-size: 16px;">3. Ați ajuns la timp + Neagă + FĂRĂ dovadă</strong>
+            <p style="color: #cbd5e1; font-size: 15px; margin: 5px 0 0 0;">Dacă susține că nu a tras, dar NU are o dovadă video ➜ <strong>PERCHEZIȚIE</strong>.</p>
+        </div>
+
+        <div style="background: rgba(0,0,0,0.2); padding: 15px; border-left: 3px solid #10b981;">
+            <strong style="color: #10b981; font-size: 16px;">4. Ați ajuns la timp + Neagă + ARE DOVADĂ</strong>
+            <p style="color: #f1f5f9; font-size: 15px; margin: 5px 0 0 0;">
+                Dacă susține că are o dovadă video: <strong>NU ÎI FACEȚI PERCHEZIȚIE PE LOC!</strong><br>
+                Îl transportați la secție pentru a vizualiza dovada acolo.<br><br>
+                <span style="color:#cbd5e1; font-size:14px;">- Dacă nu a făcut nimic: Îl eliberați.<br>
+                - Dacă se vede pe filmare că a tras: Îl acuzați conform dovezii.</span>
+            </p>
         </div>
     </div>
 
