--- a/pages/ghid_proceduri.html
+++ b/pages/ghid_proceduri.html
@@ -177,7 +177,7 @@
             <ul style="font-size: 15px; color: #f1f5f9; padding-left: 20px; line-height: 1.5;">
                 <li>Maxim 3 echipaje active.</li>
                 <li>Pentru depășire: Cereți 10-2 pe stație.</li>
-                <li>Intrare în locuință: Doar cu mandat (contact [001]).</li>
+                <li>Intrare în locuință: Doar cu mandat (contactați [001] Maxim Pulaski).</li>
                 <li><strong>TIR:</strong> Se trage la roți după 10 min (aprobare Inspector+).</li>
             </ul>
         </div>
