--- a/pages/ghid_proceduri.html
+++ b/pages/ghid_proceduri.html
@@ -17,7 +17,7 @@
     <h3 style="margin-top: 30px; border-bottom: 1px solid rgba(255,255,255,0.1); padding-bottom: 10px;">🟡 Lanțul de Comandă</h3>
     <div style="background: rgba(255,255,255,0.05); padding: 20px; border-radius: 8px; border: 1px solid rgba(255,255,255,0.05);">
         <p style="color: #f1f5f9; margin-bottom: 15px; font-size: 15px; line-height: 1.6;">
-            Orice nelămurire se adresează gradului superior direct (Cadet ➔ Agent ➔ Agent Principal).<br>
+            Orice nelămurire se adresează gradului superior direct (Cadet ➔ Agent ➔ Agent Principal ș.a.m.d).<br>
             Ascultați ordinele superiorilor! Ei sunt răspunzători pentru deciziile luate.
         </p>
         <div style="background: rgba(0,0,0,0.3); padding: 15px; border-left: 3px solid #f59e0b; font-size: 14px; color: #cbd5e1;">
