--- a/pages/home_vpd.html
+++ b/pages/home_vpd.html
@@ -27,7 +27,7 @@
     <h3 style="color: #9ca3af; font-size: 12px; text-transform: uppercase; letter-spacing: 1px; margin-bottom: 15px;">Accesează Rapid Ghidul</h3>
     <div style="display: grid; grid-template-columns: repeat(auto-fit, minmax(200px, 1fr)); gap: 15px; margin-bottom: 40px;">
         
-        <div onclick="loadChapter('cap1')" style="cursor: pointer; background: rgba(30, 41, 59, 0.5); padding: 15px; border-radius: 8px; text-align: center; border: 1px solid rgba(59, 130, 246, 0.2); transition: 0.2s;" onmouseover="this.style.background='rgba(59, 130, 246, 0.1)'" onmouseout="this.style.background='rgba(30, 41, 59, 0.5)'">
+        <div onclick="loadChapter('cod_penal')" style="cursor: pointer; background: rgba(30, 41, 59, 0.5); padding: 15px; border-radius: 8px; text-align: center; border: 1px solid rgba(59, 130, 246, 0.2); transition: 0.2s;" onmouseover="this.style.background='rgba(59, 130, 246, 0.1)'" onmouseout="this.style.background='rgba(30, 41, 59, 0.5)'">
             <div style="font-size: 24px; margin-bottom: 5px;">⚖️</div>
             <h4 style="margin: 0; color: #fff; font-size: 14px;">Cod Penal</h4>
             <p style="margin: 0; font-size: 11px; color: #9ca3af;">Legislație & Amenzi</p>
