--- a/pages/home_vpd.html
+++ b/pages/home_vpd.html
@@ -33,13 +33,13 @@
             <p style="margin: 0; font-size: 11px; color: #9ca3af;">Legislație & Amenzi</p>
         </div>
 
-        <div onclick="loadResource('Uniforme')" style="cursor: pointer; background: rgba(30, 41, 59, 0.5); padding: 15px; border-radius: 8px; text-align: center; border: 1px solid rgba(59, 130, 246, 0.2); transition: 0.2s;" onmouseover="this.style.background='rgba(59, 130, 246, 0.1)'" onmouseout="this.style.background='rgba(30, 41, 59, 0.5)'">
+        <div onclick="loadResource('ghid_dashboard')" style="cursor: pointer; background: rgba(30, 41, 59, 0.5); padding: 15px; border-radius: 8px; text-align: center; border: 1px solid rgba(59, 130, 246, 0.2); transition: 0.2s;" onmouseover="this.style.background='rgba(59, 130, 246, 0.1)'" onmouseout="this.style.background='rgba(30, 41, 59, 0.5)'">
             <div style="font-size: 24px; margin-bottom: 5px;">👕</div>
             <h4 style="margin: 0; color: #fff; font-size: 14px;">Uniforme</h4>
             <p style="margin: 0; font-size: 11px; color: #9ca3af;">Cod Vestimentar</p>
         </div>
 
-        <div onclick="loadResource('Masini')" style="cursor: pointer; background: rgba(30, 41, 59, 0.5); padding: 15px; border-radius: 8px; text-align: center; border: 1px solid rgba(59, 130, 246, 0.2); transition: 0.2s;" onmouseover="this.style.background='rgba(59, 130, 246, 0.1)'" onmouseout="this.style.background='rgba(30, 41, 59, 0.5)'">
+        <div onclick="loadResource('Uniforme')" style="cursor: pointer; background: rgba(30, 41, 59, 0.5); padding: 15px; border-radius: 8px; text-align: center; border: 1px solid rgba(59, 130, 246, 0.2); transition: 0.2s;" onmouseover="this.style.background='rgba(59, 130, 246, 0.1)'" onmouseout="this.style.background='rgba(30, 41, 59, 0.5)'">
             <div style="font-size: 24px; margin-bottom: 5px;">🚓</div>
             <h4 style="margin: 0; color: #fff; font-size: 14px;">Parc Auto</h4>
             <p style="margin: 0; font-size: 11px; color: #9ca3af;">Vehicule & Acces</p>
