--- a/pages/selectie_grade.html
+++ b/pages/selectie_grade.html
@@ -29,3 +29,6 @@
       Inspector
   </button>
 </div>
+
+<br>
+<button onclick="loadHome()" style="width:100%; padding: 12px; background: rgba(255,255,255,0.1); border: none; color: white; border-radius: 6px; cursor: pointer; font-weight: 600;">« Înapoi la Dashboard</button>
