--- a/pages/pontaj.html
+++ b/pages/pontaj.html
@@ -1,9 +1,9 @@
 <div style="animation: fadeIn 0.5s ease;">
 
     <div class="crime" style="border-left: 4px solid #8b5cf6; background: rgba(139, 92, 246, 0.1); margin-bottom: 30px;">
-        <h3 style="color: #8b5cf6; margin-bottom: 5px;">⏱️ SISTEM DE PONTAJ</h3>
+        <h3 style="color: #8b5cf6; margin-bottom: 5px;">⏱️ CLOCK-IN / CLOCK-OUT</h3>
         <p class="desc" style="color: #e2e8f0;">
-            Gestionează-ți orele de muncă. Sistemul copiază automat formatul pentru Discord.
+            Apasa pe butoanele de mai jos pentru a incepe activitatea. Nu uita sa te treci si pe canalul #politie-pontaj.
         </p>
     </div>
 
