--- a/pages/pontaj.html
+++ b/pages/pontaj.html
@@ -37,7 +37,7 @@
     </div>
 
     <h3 style="color: #cbd5e1; border-bottom: 1px solid rgba(255,255,255,0.1); padding-bottom: 10px; margin-bottom: 20px;">
-        📜 Istoricul Tău (Local)
+        📜 Istoricul Tău
     </h3>
 
     <div style="overflow-x: auto;">
